(waybar) Fix padding being too small

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -15,7 +15,6 @@
     font-size: 12px;
     min-height: 0;
     margin: 0;
-    padding: 0;
     border: none;
     box-shadow: 0 0;
 }
@@ -41,6 +40,7 @@ window#waybar.hidden {
 #mode,
 #workspaces button {
     color: #ffffff;
+    padding: 0 5px;
 }
 #workspaces button {
     color: #ddd;
